# ai_investment_journey

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: issue-000-mission.md
notebooks/001-linear-regression-ml/: 001 copy.ipynb  001.ipynb  README.md
notebooks/001-linear-regression-ml/data/: credit-rating-mapping.csv  linear-regression-ml-data-enhanced.csv  linear-regression-ml-data.csv
